[gd_scene load_steps=10 format=3 uid="uid://c1m4pw8p6ypx"]

[ext_resource type="Script" path="res://Scenes and Scripts/red_dragon.gd" id="1_2vskn"]
[ext_resource type="Texture2D" uid="uid://2lpxp3owg4fr" path="res://Game Assets/flying_dragon-1.1/PNG/144x128/flying_dragon-red.png" id="2_8o7hj"]
[ext_resource type="AudioStream" uid="uid://dyedu0yaihg0p" path="res://sound/dragon-growl-37570.mp3" id="3_bex7b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fvjky"]
atlas = ExtResource("2_8o7hj")
region = Rect2(0, 384, 144, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf7cp"]
atlas = ExtResource("2_8o7hj")
region = Rect2(144, 384, 144, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfrpt"]
atlas = ExtResource("2_8o7hj")
region = Rect2(288, 384, 144, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_bt3gl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvjky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf7cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfrpt")
}],
"loop": true,
"name": &"MoveLeft",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1c7kh"]
size = Vector2(112, 69)

[sub_resource type="CircleShape2D" id="CircleShape2D_3i68f"]
radius = 115.017

[node name="RedDragon" type="CharacterBody2D" groups=["enemy", "red_dragon"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_2vskn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_bt3gl")
animation = &"MoveLeft"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_1c7kh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_3i68f")

[node name="LairAttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GrowlSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bex7b")
volume_db = -10.0
pitch_scale = 1.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LairAttackCooldown" to="." method="_on_lair_attack_cooldown_timeout"]
